# critter-catcher

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml
critter_catcher/: __init__.py  cli.py  dataclasses.py  event_processor.py  manager.py  unifi_protect_client_manager.py  unifi_protect_event_processor.py
